add: integration with mailing service
